init( build.gradle.kts, application.properties ): add dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=spring-ecommerce
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:database
 spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:database # from jdbc
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 security.jwt.token.secret-key=your-very-secret-key-super-super-long-special-key
 security.jwt.token.expire-length-ms=3600000
 
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
+#spring.datasource.url=jdbc:h2:mem:test;MODE=MYSQL;DB_CLOSE_DELAY=-1
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
