--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.application.name=spring-ecommerce
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:h2:mem:database # from jdbc
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
@@ -12,6 +11,10 @@ security.jwt.token.expire-length-ms=3600000
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-#spring.datasource.url=jdbc:h2:mem:test;MODE=MYSQL;DB_CLOSE_DELAY=-1
+# from JPA
+# spring.datasource.url=jdbc:h2:mem:test;MODE=MYSQL;DB_CLOSE_DELAY=-1
+# from jdbc
+spring.datasource.url=jdbc:h2:mem:database
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
