chore: cleanup code
- remove unused JDBC-related files and lines
- adjust schema.sql conditions (not used with JPA)
- cleanup application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,23 @@
-spring.application.name=spring-ecommerce
+spring.application.name=spring-ecommerce-order
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
-spring.sql.init.data-locations=classpath:data.sql
+
 security.jwt.token.secret-key=your-very-secret-key-super-super-long-special-key
 security.jwt.token.expire-length-ms=3600000
 
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+spring.sql.init.mode=always
 
 # from JPA
-# spring.datasource.url=jdbc:h2:mem:test;MODE=MYSQL;DB_CLOSE_DELAY=-1
-# from jdbc
+spring.jpa.defer-datasource-initialization=true
+pring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#  TODO: search why we need
 spring.datasource.url=jdbc:h2:mem:database
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=none
+
+## from jdbc
+#spring.sql.init.schema-locations=classpath:schema.sql
+#spring.sql.init.data-locations=classpath:data.sql
+
