chore: comment in `spring.jpa.open-in-view=false` and remove @Disabled annotation from CartEntityTest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,14 @@ spring.sql.init.mode=always
 
 # from JPA
 spring.jpa.defer-datasource-initialization=true
-pring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#  TODO: search why we need
 spring.datasource.url=jdbc:h2:mem:database
 
 ## from jdbc
 #spring.sql.init.schema-locations=classpath:schema.sql
 #spring.sql.init.data-locations=classpath:data.sql
 
-#spring.jpa.open-in-view=false
+spring.jpa.open-in-view=false
