--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.datasource.url=jdbc:h2:mem:database
 #spring.sql.init.data-locations=classpath:data.sql
 
 spring.jpa.open-in-view=false
+
+## Stripe
+stripe.secret-key=YOUR_SECRET_KEY
